src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociation_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociation_StringErrorContext.class */
public final class GLXAMDGPUAssociation_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glXBlitContextFramebufferAMD(JIIIIIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXCreateAssociatedContextAMD(IJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("nglXCreateAssociatedContextAttribsAMD(IJJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXCreateAssociatedContextAttribsAMD(IJLjava/nio/IntBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXDeleteAssociatedContextAMD(J)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXGetContextGPUIDAMD(J)I", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXGetCurrentAssociatedContextAMD()J", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("nglXGetGPUIDsAMD(IJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXGetGPUIDsAMD(Ljava/nio/IntBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("nglXGetGPUInfoAMD(IIIIJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXGetGPUInfoAMD(IIILjava/nio/ByteBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXMakeAssociatedContextCurrentAMD(J)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXCreateAssociatedContextAttribsAMD(IJ[I)J", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        methods.put("glXGetGPUIDsAMD([I)I", "net/labymod/core/laby3d/opengl/error/generated/GLXAMDGPUAssociationErrorContext");
        return methods;
    }
}
